@@ -72,6 +72,7 @@ class Base(zeit.web.core.view.Base):
     @zeit.web.reify
     def meta_robots(self):
         # Try seo presets first
+
         if self.seo_robot_override:
             return self.seo_robot_override
 
@@ -90,6 +91,13 @@ class Base(zeit.web.core.view.Base):
                 return 'noindex,follow,noodp,noydir,noarchive'
         elif path('/autoren/index'):
             return 'noindex,follow'
+
+        # Exclude certain products and ressorts from being followed
+        exclude_products = ('TGS', 'HaBl', 'WIWO', 'GOLEM')
+
+        if self.product_id in exclude_products or (
+                self.ressort == 'Fehler' and self.product_id == 'ZEAR'):
+                return 'noindex,follow'
         else:
             return 'index,follow,noodp,noydir,noarchive'
 
