@@ -65,21 +65,6 @@ class Article(zeit.web.core.view_article.Article, zeit.web.site.view.Base):
         return self.seo_title_default
 
     @zeit.web.reify
-    def meta_robots(self):
-        # Try seo presets first
-        if self.seo_robot_override:
-            return self.seo_robot_override
-
-        # Exclude certain products and ressorts from being followed
-        exclude_products = ('TGS', 'HaBl', 'WIWO', 'GOLEM')
-
-        if self.product_id in exclude_products or (
-                self.ressort == 'Fehler' and self.product_id == 'ZEAR'):
-                return 'noindex,follow'
-        else:
-            return 'index,follow,noodp,noydir,noarchive'
-
-    @zeit.web.reify
     def pdf_link(self):
         server = 'http://pdf.zeit.de/'
         path = '/'.join(self.request.traversed)
