@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - ZON-2219: Fix image size in force-mobile
 
+- FIX: Join rules for robots in view.py otherwise articles don't get correct rules
+
 
 2.1 (2015-09-14)
 ----------------
